Fixed broken code and refactored iterators